--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 export APP_DB_USERNAME="postgres"
-export APP_DB_PASSWORD=
+export APP_DB_PASSWORD="12345"
 export APP_DB_NAME="postgres"
 
 export APP_REDIS_ADDR="localhost:6379"
